--- a/flair.css
+++ b/flair.css
@@ -31,7 +31,7 @@
 }
 
 #splash {
-    background-image: url('https://twitter.com/images/resources/twitter-bird-white-on-blue.png');
+    background-image: url('https://jiscmail.identitylabs.org/jiscmail.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-color: #00abf0;
