--- a/flair.css
+++ b/flair.css
@@ -110,7 +110,7 @@ div.post {
     color: #099;
 }
 
-.feedEkList{width:450px; list-style:none outside none;background-color:#FFFFFF; border:1px solid #D3CAD7; padding:4px 6px; color:#3E3E3E;}
+.feedEkList{font-family: 'Open Sans', sans-serif; list-style:none outside none;background-color:#FFFFFF; border:1px solid #D3CAD7; padding:4px 6px; color:#3E3E3E;}
 .feedEkList li{border-bottom:1px solid #D3CAD7; padding:5px;}
 .feedEkList li:last-child{border-bottom:none;}
 .itemTitle a{font-weight:bold; color:#4EBAFF !important; text-decoration:none }
