--- a/flair.css
+++ b/flair.css
@@ -110,9 +110,35 @@ div.post {
     color: #099;
 }
 
-.feedEkList{font-family: 'Open Sans', sans-serif; list-style:none outside none;background-color:#FFFFFF; border:1px solid #D3CAD7; padding:4px 6px; color:#3E3E3E;}
-.feedEkList li{border-bottom:1px solid #D3CAD7; padding:5px;}
-.feedEkList li:last-child{border-bottom:none;}
-.itemTitle a{font-weight:bold; color:#4EBAFF !important; text-decoration:none }
-.itemTitle a:hover{ text-decoration:underline }
-.itemDate{font-size:11px;color:#AAAAAA;}
+.feedEkList {
+    font-family: 'Open Sans', sans-serif;
+    list-style:none outside none;
+    padding:4px 6px;
+    color:#494949;
+}
+
+.feedEkList li {
+font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    border-bottom: 1px dotted #ccc;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+.feedEkList li:last-child {
+    border-bottom:none;
+}
+
+.itemTitle a {
+    font-weight:bold;
+    color:#4EBAFF !important;
+    text-decoration:none
+}
+
+.itemTitle a:hover {
+    text-decoration:underline
+}
+
+.itemDate{
+    font-size:11px;
+    color:#AAAAAA;
+}
