--- a/flair.css
+++ b/flair.css
@@ -116,7 +116,7 @@ div.post {
     list-style:none outside none;
     padding:4px;
     color:#494949;
-    -webkit-padding-start: 10px;
+    -webkit-margin-before: 0em;
 }
 
 .feedEkList li {
