--- a/flair.css
+++ b/flair.css
@@ -6,7 +6,7 @@
 
 #bar {
     background-color: #e2e2e2;
-    background-image: url('https://jiscmail-widget.identitylabs.org/jiscmail.png');
+    background-image: url('https://jiscmail-widget.identitylabs.org/jiscmail.png'); /* CONFIGURATION */
     background-size: auto 24px;
     background-position: 3px center;
     background-repeat: no-repeat;
@@ -14,7 +14,7 @@
 }
 
 #splash {
-    background-image: url('https://jiscmail-widget.identitylabs.org/jiscmail.png');
+    background-image: url('https://jiscmail-widget.identitylabs.org/jiscmail.png'); /*CONFIGURATION */
     background-repeat: no-repeat;
     background-position: center center;
     background-color: #e2e2e2;
